# fadeno-lang

./: .gitignore  README.md  church-test.fad  fadeno-lang.cabal  flake.nix  fourmolu.yaml  incons.fad  language-tour.md  std-tmp.fad  std.fad  sum.fad  target.fad  test.fad
.github/workflows/: ci.yml
app/: Arithmetic.hs  Compiler.hs  Context.hs  Driver.hs  Lexer.hs  Main.hs  NameGen.hs  Normalize.hs  OldParser.hs  Parser.hs  Ser.hs
fad/: core.fad  in_y_minutes.fad  incons.fad  std-slow.fad  std-tmp.fad  std.fad  target.fad  test.fad
fad/test/: dep-record-if.fad  eq-autorewr.fad  eq-nesting.fad  eq-sym.fad  id.fad  int->int+.fad  myif.fad  nesting.fad  ref.fad
fad/test/neg/: eq-fail.fad  missing-field.fad  type-mismatch.fad  universe-inconsistency.fad  wrong-arity.fad
test/: TestMain.hs
test/golden/: dep-record-if.golden  eq-autorewr.golden  eq-nesting.golden  eq-sym.golden  int->int+.golden  myif.golden  std.golden
test/golden/test/: id.golden
test/golden/test/neg/: eq-fail.golden  missing-field.golden  type-mismatch.golden  universe-inconsistency.golden  wrong-arity.golden
