cabal-version:      3.4
name:               fadeno-lang
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           dentrado.art
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Gardanta Spirito
maintainer:         guardspirit@protonmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -fmax-pmcheck-models=60

executable fadeno-lang
    import:           warnings
    main-is:          Main.hs
    other-modules: Parser
    default-extensions: LambdaCase, UnicodeSyntax, BlockArguments, TemplateHaskell, OverloadedStrings, NoImplicitPrelude
    build-depends:
        base ^>=4.20.0.0,
        rio >= 0.1,
        containers >= 0.7,
        flatparse >= 0.5,
        prettyprinter >= 1,
        prettyprinter-ansi-terminal >= 1,
        fused-effects >= 1,
        cereal >= 0.5,
        bytestring >= 0.12,
        template-haskell >= 2,
        hashable >= 1.5
    hs-source-dirs:   app
    default-language: GHC2021
